--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,18 @@
 
 
-.navbar-brand {
+/* .navbar-brand {
     text-align: center;
-    font-size: 100px;
+    font-size: 90px;
     font-family: 'Abril Fatface';
 
-}
-
+} */
+/* 
 .nav-link {
     font-size: 30px;
     font-family: sans-serif;
+} */
+
+.all-rivets {
+    text-align: center;
+    border-style: dotted;
 }
